--- a/.github/workflows/hpo-ci.yaml
+++ b/.github/workflows/hpo-ci.yaml
@@ -50,6 +50,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name : Set up Go
+        uses : actions/setup-go@v5
+        with:
+          go-version: 1.22
       - name : Export image version
         run : |
           source ./scripts/version
