Correct bci image tag

--- a/package/Dockerfile-helm-project-operator
+++ b/package/Dockerfile-helm-project-operator
@@ -34,7 +34,7 @@ COPY . .
 RUN make build-chart
 RUN make build
 
-FROM registry.suse.com/bci/bci-micro:15.6
+FROM registry.suse.com/bci/bci-micro:latest
 RUN echo 'helmprojectoperator:x:1000:1000::/home/helmprojectoperator:/bin/bash' >> /etc/passwd && \
     echo 'helmprojectoperator:x:1000:' >> /etc/group && \
     mkdir /home/helmprojectoperator && \
