--- a/.github/workflows/hpo-e2e-ci.yaml
+++ b/.github/workflows/hpo-e2e-ci.yaml
@@ -46,7 +46,7 @@ jobs:
       matrix:
         arch:
           - x64
-          #- arm64
+          - arm64
         k3s_version:
           # k3d version list k3s | sed 's/+/-/' | sort -h
           - ${{ github.event.inputs.k3s_version || 'v1.20.15-k3s1' }}
