Adding setting Priority CalssNames in prometheus-federator chart

--- a/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/templates/deployment.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/templates/deployment.yaml
@@ -18,6 +18,9 @@ spec:
       labels: {{ include "helm-project-operator.labels" . | nindent 8 }}
         app: {{ template "helm-project-operator.name" . }}
     spec:
+    {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+    {{- end }}
       containers:
         - name: {{ template "helm-project-operator.name" . }}
           image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}"
