--- a/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/values.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/charts/helmProjectOperator/values.yaml
@@ -184,6 +184,11 @@ securityContext: {}
   # supplementalGroups:
   # - 1000
 
+## Priority class assigned to the Pods
+##
+priorityClassName: ""
+
+
 debug: false
 debugLevel: 0
 
