--- a/charts/prometheus-federator/0.4.3-rc.1/values.yaml
+++ b/charts/prometheus-federator/0.4.3-rc.1/values.yaml
@@ -87,6 +87,10 @@ helmProjectOperator:
   securityContext: {}
     # allowPrivilegeEscalation: false
     # readOnlyRootFilesystem: true
+
+  ## Priority class assigned to the Pods
+  ##
+  priorityClassName: ""
     
   debug: false
   debugLevel: 0
