try to fix comment feature

--- a/.github/workflows/pr-debug-publish.yaml
+++ b/.github/workflows/pr-debug-publish.yaml
@@ -28,6 +28,7 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+      pull-requests: write
     steps:
       # Checkout the code at the head of the specified PR
       - name: Checkout the repository
@@ -108,27 +109,34 @@ jobs:
 
       - name: Comment on PR with image details
         uses: actions/github-script@v6
+        env:
+          meta-helm-locker: ${{ steps.meta-helm-locker.outputs.tags }}
+          meta-helm-project-operator: ${{ steps.meta-helm-project-operator.outputs.tags }}
+          meta-prometheus-federator: ${{ steps.meta-prometheus-federator.outputs.tags }}
         with:
           script: |
             const prNumber = context.payload.inputs.pr_number;
             const images = [
               {
                 name: 'Helm Locker',
+                key: 'meta-helm-locker',
                 url: `https://github.com/${{ github.repository }}/pkgs/container/prometheus-federator%2Fhelm-locker`
               },
               {
                 name: 'Helm Project Operator',
+                key: 'meta-helm-project-operator',
                 url: `https://${process.env.GHCR_REGISTRY}/${{ github.repository }}/pkgs/container/prometheus-federator%2Fhelm-project-operator`
               },
               {
                 name: 'Prometheus Federator',
+                key: 'meta-prometheus-federator',
                 url: `https://${process.env.GHCR_REGISTRY}/${{ github.repository }}/pkgs/container/prometheus-federator`
               }
             ];
 
             const commentBody = images
-              .map(image => `- **${image.name}**: [Link to image](${image.url}):\n  Tags: \`${steps['meta-' + image.name.replace(/\s+/g, '-').toLowerCase()].outputs.tags}\``)
-              .join('\n\n');
+              .map(image => `- **${image.name}**: [Link to image](${image.url}):\n  Tags: \`${process.env[image.key]}\``)
+              .join('\n\n');1
 
             github.rest.issues.createComment({
               issue_number: prNumber,
