limit PR debug action to singleton runs

--- a/.github/workflows/pr-debug-publish.yaml
+++ b/.github/workflows/pr-debug-publish.yaml
@@ -8,6 +8,10 @@ on:
         required: true
         type: number
 
+concurrency:
+  group: prs-${{ github.event.inputs.pr_number }}
+  cancel-in-progress: true
+
 env:
   GHCR_REGISTRY: ghcr.io
   REGISTRY: docker.io
