--- a/package/Dockerfile-prometheus-federator
+++ b/package/Dockerfile-prometheus-federator
@@ -4,7 +4,7 @@ FROM --platform=$BUILDPLATFORM rancher/mirrored-tonistiigi-xx:1.3.0 AS xx
 FROM --platform=$BUILDPLATFORM registry.suse.com/bci/golang:1.22 AS helm
 
 # Clone repository once, and reuse it for target archs.
-ARG HELM_VERSION=release-v3.9.0
+ARG HELM_VERSION=v3.13.3-rancher1
 ADD --keep-git-dir=true https://github.com/rancher/helm.git#${HELM_VERSION} /helm
 RUN cd /helm && go mod download
 
