Add default empty registry value to prom-fed chart

--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -55,6 +55,7 @@ helmProjectOperator:
       - rancher-monitoring-prometheus.cattle-monitoring-system.svc:9090
 
   image:
+    registry: ''
     repository: rancher/prometheus-federator
     tag: ''
     pullPolicy: IfNotPresent
