--- a/charts/prometheus-federator/0.4.4/values.yaml
+++ b/charts/prometheus-federator/0.4.4/values.yaml
@@ -55,6 +55,7 @@ helmProjectOperator:
       - rancher-monitoring-prometheus.cattle-monitoring-system.svc:9090
 
   image:
+    registry: ''
     repository: rancher/prometheus-federator
     tag: ''
     pullPolicy: IfNotPresent
