Revert superfluous chart renaming

--- a/packages/rancher-project-monitoring/generated-changes/overlay/files/federate/federate-scrape-config.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/files/federate/federate-scrape-config.yaml
@@ -5,8 +5,8 @@
 
   params:
     'match[]':
-      - '{namespace=~"{{ include "project-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=~"kube-state-metrics|kubelet|k3s-server"}'
-      - '{namespace=~"{{ include "project-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=""}'
+      - '{namespace=~"{{ include "kube-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=~"kube-state-metrics|kubelet|k3s-server"}'
+      - '{namespace=~"{{ include "kube-prometheus-stack.projectNamespaceList" . | replace "," "|" }}", job=""}'
 
   static_configs:
     - targets: {{ .Values.federate.targets | toYaml | nindent 6 }}
