--- a/packages/rancher-project-monitoring/generated-changes/overlay/templates/prometheus/federate.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/templates/prometheus/federate.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-federate
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
-  labels: {{ include "project-prometheus-stack.labels" . | nindent 4 }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-federate
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
+  labels: {{ include "kube-prometheus-stack.labels" . | nindent 4 }}
 data:
   federate-scrape-config.yaml: {{ tpl (.Files.Get "files/federate/federate-scrape-config.yaml" ) $ | b64enc | quote }}
 {{- end }}
