--- a/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboards/rancher/pods-dashboards.yaml
+++ b/packages/rancher-project-monitoring/generated-changes/overlay/templates/dashboards/rancher/pods-dashboards.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   name: rancher-default-dashboards-pods
   annotations:
 {{ toYaml .Values.grafana.sidecar.dashboards.annotations | indent 4 }}
@@ -10,8 +10,8 @@ metadata:
     {{- if $.Values.grafana.sidecar.dashboards.label }}
     {{ $.Values.grafana.sidecar.dashboards.label }}: {{ ternary $.Values.grafana.sidecar.dashboards.labelValue "1" (not (empty $.Values.grafana.sidecar.dashboards.labelValue)) | quote }}
     {{- end }}
-    app: {{ template "project-prometheus-stack.name" $ }}-grafana
-{{ include "project-prometheus-stack.labels" $ | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" $ }}-grafana
+{{ include "kube-prometheus-stack.labels" $ | indent 4 }}
 data:
 {{ (.Files.Glob "files/rancher/pods/*").AsConfig | indent 2 }}
 {{- end }}
