--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/serviceaccount.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/serviceaccount.yaml
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "project-prometheus-stack.prometheus.serviceAccountName" . }}
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.prometheus.serviceAccountName" . }}
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
-    app.kubernetes.io/name: {{ template "project-prometheus-stack.name" . }}-prometheus
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+    app.kubernetes.io/name: {{ template "kube-prometheus-stack.name" . }}-prometheus
     app.kubernetes.io/component: prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- if .Values.prometheus.serviceAccount.annotations }}
   annotations:
 {{ toYaml .Values.prometheus.serviceAccount.annotations | indent 4 }}
 {{- end }}
 {{- if .Values.global.imagePullSecrets }}
 imagePullSecrets:
-{{ include "project-prometheus-stack.imagePullSecrets" . | trim | indent 2 }}
+{{ include "kube-prometheus-stack.imagePullSecrets" . | trim | indent 2 }}
 {{- end }}
 {{- end }}
