--- a/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp-role.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp-role.yaml
@@ -3,11 +3,11 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-alertmanager
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-alertmanager
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 rules:
 {{- $kubeTargetVersion := default .Capabilities.KubeVersion.GitVersion .Values.kubeTargetVersionOverride }}
 {{- if semverCompare "> 1.15.0-0" $kubeTargetVersion }}
@@ -18,6 +18,6 @@ rules:
   resources: ['podsecuritypolicies']
   verbs:     ['use']
   resourceNames:
-  - {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+  - {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
 {{- end }}
 {{- end }}
