--- a/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp-rolebinding.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp-rolebinding.yaml
@@ -3,18 +3,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-alertmanager
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-alertmanager
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
 subjects:
   - kind: ServiceAccount
-    name: {{ template "project-prometheus-stack.alertmanager.serviceAccountName" . }}
-    namespace: {{ template "project-prometheus-stack.namespace" . }}
+    name: {{ template "kube-prometheus-stack.alertmanager.serviceAccountName" . }}
+    namespace: {{ template "kube-prometheus-stack.namespace" . }}
 {{- end }}
 {{- end }}
