--- a/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/psp.yaml
@@ -3,14 +3,14 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-alertmanager
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-alertmanager
+    app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
 {{- if .Values.global.rbac.pspAnnotations }}
   annotations:
 {{ toYaml .Values.global.rbac.pspAnnotations | indent 4 }}
 {{- end }}
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
   privileged: false
   # Allow core volume types.
