--- a/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/secret.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/secret.yaml
@@ -1,12 +1,12 @@
 {{- if and (.Values.alertmanager.enabled) (not .Values.alertmanager.alertmanagerSpec.useExistingSecret) }}
 {{/* This file is applied when the operation is helm install and the target secret does not exist. */}}
-{{- $secretName := (printf "alertmanager-%s" (include "project-prometheus-stack.alertmanager.crname" .)) }}
-{{- if (not (lookup "v1" "Secret" (include "project-prometheus-stack.namespace" .) $secretName)) }}
+{{- $secretName := (printf "alertmanager-%s" (include "kube-prometheus-stack.alertmanager.crname" .)) }}
+{{- if (not (lookup "v1" "Secret" (include "kube-prometheus-stack.namespace" .) $secretName)) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ $secretName }}
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   annotations:
     "helm.sh/hook": pre-install, pre-upgrade
     "helm.sh/hook-weight": "3"
@@ -15,8 +15,8 @@ metadata:
 {{ toYaml .Values.alertmanager.secret.annotations | indent 4 }}
 {{- end }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-alertmanager
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 data:
 {{- if .Values.alertmanager.tplConfig }}
 {{- if .Values.alertmanager.stringConfig }}
