--- a/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/service.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/alertmanager/service.yaml
@@ -3,12 +3,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-alertmanager
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-alertmanager
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-alertmanager
+    app: {{ template "kube-prometheus-stack.name" . }}-alertmanager
     self-monitor: {{ .Values.alertmanager.serviceMonitor.selfMonitor | quote }}
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- if .Values.alertmanager.service.labels }}
 {{ toYaml .Values.alertmanager.service.labels | indent 4 }}
 {{- end }}
@@ -55,7 +55,7 @@ spec:
 {{- end }}
   selector:
     app.kubernetes.io/name: alertmanager
-    alertmanager: {{ template "project-prometheus-stack.alertmanager.crname" . }}
+    alertmanager: {{ template "kube-prometheus-stack.alertmanager.crname" . }}
 {{- if .Values.alertmanager.service.sessionAffinity }}
   sessionAffinity: {{ .Values.alertmanager.service.sessionAffinity }}
 {{- end }}
