--- a/charts/rancher-project-monitoring/0.4.3/templates/grafana/namespaces.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/grafana/namespaces.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Values.grafana.defaultDashboards.namespace }}
   labels:
     name: {{ .Values.grafana.defaultDashboards.namespace }}
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
   annotations:
 {{- if not .Values.grafana.defaultDashboards.cleanupOnUninstall }}
     helm.sh/resource-policy: "keep"
