--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/clusterrole.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/clusterrole.yaml
@@ -2,10 +2,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 rules:
 # This permission are not in the kube-prometheus repo
 # they're grabbed from https://github.com/prometheus/prometheus/blob/master/documentation/examples/rbac-setup.yml
