--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/clusterrolebinding.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/clusterrolebinding.yaml
@@ -2,17 +2,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
 subjects:
   - kind: ServiceAccount
-    name: {{ template "project-prometheus-stack.prometheus.serviceAccountName" . }}
-    namespace: {{ template "project-prometheus-stack.namespace" . }}
+    name: {{ template "kube-prometheus-stack.prometheus.serviceAccountName" . }}
+    namespace: {{ template "kube-prometheus-stack.namespace" . }}
 {{- end }}
 
