--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/podDisruptionBudget.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/podDisruptionBudget.yaml
@@ -1,12 +1,12 @@
 {{- if and .Values.prometheus.enabled .Values.prometheus.podDisruptionBudget.enabled }}
-apiVersion: {{ include "project-prometheus-stack.pdb.apiVersion" . }}
+apiVersion: {{ include "kube-prometheus-stack.pdb.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
   {{- if .Values.prometheus.podDisruptionBudget.minAvailable }}
   minAvailable: {{ .Values.prometheus.podDisruptionBudget.minAvailable }}
@@ -21,5 +21,5 @@ spec:
       {{- else }}
       app.kubernetes.io/name: prometheus
       {{- end }}
-      operator.prometheus.io/name: {{ template "project-prometheus-stack.prometheus.crname" . }}
+      operator.prometheus.io/name: {{ template "kube-prometheus-stack.prometheus.crname" . }}
 {{- end }}
