--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/secret.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/secret.yaml
@@ -3,12 +3,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
     app.kubernetes.io/component: prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 data:
   object-storage-configs.yaml: {{ toYaml .Values.prometheus.prometheusSpec.thanos.objectStorageConfig.secret | b64enc | quote }}
 {{- end }}
