--- a/charts/rancher-project-monitoring/0.4.3/templates/prometheus/servicemonitor.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/prometheus/servicemonitor.yaml
@@ -2,11 +2,11 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ template "project-prometheus-stack.fullname" . }}-prometheus
-  namespace: {{ template "project-prometheus-stack.namespace" . }}
+  name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "project-prometheus-stack.name" . }}-prometheus
-{{ include "project-prometheus-stack.labels" . | indent 4 }}
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
+{{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- with .Values.prometheus.serviceMonitor.additionalLabels }}
 {{- toYaml . | nindent 4 }}
 {{- end }}
@@ -14,12 +14,12 @@ spec:
   {{- include "servicemonitor.scrapeLimits" .Values.prometheus.serviceMonitor | nindent 2 }}
   selector:
     matchLabels:
-      app: {{ template "project-prometheus-stack.name" . }}-prometheus
+      app: {{ template "kube-prometheus-stack.name" . }}-prometheus
       release: {{ $.Release.Name | quote }}
       self-monitor: "true"
   namespaceSelector:
     matchNames:
-      - {{ printf "%s" (include "project-prometheus-stack.namespace" .) | quote }}
+      - {{ printf "%s" (include "kube-prometheus-stack.namespace" .) | quote }}
   endpoints:
   - port: {{ .Values.prometheus.prometheusSpec.portName }}
     {{- if .Values.prometheus.serviceMonitor.interval }}
