--- a/charts/rancher-project-monitoring/0.4.3/templates/rancher-monitoring/hardened.yaml
+++ b/charts/rancher-project-monitoring/0.4.3/templates/rancher-monitoring/hardened.yaml
@@ -124,7 +124,7 @@ metadata:
   namespace: {{ $ns }}
 spec:
   podSelector: {}
-  ingress: {{- default (list dict | toYaml) (include "project-prometheus-stack.hardened.networkPolicy.ingress" (list $ $ns)) | nindent 4 }}
+  ingress: {{- default (list dict | toYaml) (include "kube-prometheus-stack.hardened.networkPolicy.ingress" (list $ $ns)) | nindent 4 }}
   egress: {{- $.Values.global.networkPolicy.egress | toYaml | nindent 4 }}
   policyTypes:
   - Ingress
