--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -37,6 +37,13 @@ helmProjectOperator:
 
   nameOverride: prometheus-federator
 
+  # Configure how the operator will manage the CustomResourceDefinitions (CRDs) it needs to function.
+  crdManagement:
+    # Enable or disable automatic updates of CRDs during startup.
+    # When true, all CRDs will be udpated to the version the operator provides.
+    # When false, only missing CRDs will be installed, and existing ones will not be updated.
+    update: true
+
   helmController:
     # Note: should be disabled for RKE2 clusters since they already run Helm Controller to manage internal Kubernetes components
     enabled: true
