--- a/.github/workflows/hpo-ci.yaml
+++ b/.github/workflows/hpo-ci.yaml
@@ -36,6 +36,8 @@ jobs:
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
       - uses: azure/setup-helm@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Perform CI
         run : BUILD_TARGET=helm-project-operator make ci
   build-images:
