--- a/.github/workflows/prom-fed-ci.yaml
+++ b/.github/workflows/prom-fed-ci.yaml
@@ -39,5 +39,7 @@ jobs:
           sudo wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_${{ matrix.arch == 'x64' && 'amd64' || matrix.arch  }} -O /usr/bin/yq && sudo chmod +x /usr/bin/yq;
       - name : Install helm
         uses: azure/setup-helm@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run CI
         run: make ci
