Add ability to determine if PromFed should manage HelmController CRDs
For now we indirectly rely on checking nodes for k8s runtime type, then based on if we find k3s/rke2 we skip them.
In the future, we'd like to directly be able to query the CRD on the cluster and see a clear annotation/label citing the CRDs owner.

--- a/packages/helm-project-operator/charts/templates/deployment.yaml
+++ b/packages/helm-project-operator/charts/templates/deployment.yaml
@@ -103,6 +103,10 @@ spec:
           - name: MANAGE_CRD_UPDATES
             value: "true"
           {{- end }}
+          {{- if .Values.crdManagement.detectK3sRke2 }}
+          - name: DETECT_K3S_RKE2
+            value: "true"
+          {{- end }}
 {{- if .Values.resources }}
           resources: {{ toYaml .Values.resources | nindent 12 }}
 {{- end }}
