--- a/charts/rancher-project-monitoring/0.4.4/templates/prometheus/service.yaml
+++ b/charts/rancher-project-monitoring/0.4.4/templates/prometheus/service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ template "kube-prometheus-stack.fullname" . }}-prometheus
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    app: {{ template "kube-prometheus-stack.name" . }}-prometheus1
+    app: {{ template "kube-prometheus-stack.name" . }}-prometheus
     self-monitor: {{ .Values.prometheus.serviceMonitor.selfMonitor | quote }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 {{- if .Values.prometheus.service.labels }}
