Add tag back to PromFed chart for rancher-charts image tooling

--- a/packages/prometheus-federator/charts/values.yaml
+++ b/packages/prometheus-federator/charts/values.yaml
@@ -68,7 +68,7 @@ helmProjectOperator:
   image:
     registry: ''
     repository: rancher/prometheus-federator
-    tag: ''
+    tag: v0.4.3
     pullPolicy: IfNotPresent
 
   # Additional arguments to be passed into the Prometheus Federator image
