Unlock project monitoring chart version

--- a/package/Dockerfile-prometheus-federator
+++ b/package/Dockerfile-prometheus-federator
@@ -21,7 +21,7 @@ FROM registry.suse.com/bci/golang:1.22 AS builder
 
 # Allow chart version config
 ARG TARGETPLATFORM
-ARG EMBEDDED_CHART_VERSION=0.3.4
+ARG EMBEDDED_CHART_VERSION
 ARG TAG=''
 ARG REPO=''
 ENV EMBEDDED_CHART_VERSION=$EMBEDDED_CHART_VERSION TAG=$TAG REPO=$REPO
