Ensure method to override rancher project monitoring version still works

--- a/package/Dockerfile-prometheus-federator
+++ b/package/Dockerfile-prometheus-federator
@@ -21,10 +21,10 @@ FROM registry.suse.com/bci/golang:1.22 AS builder
 
 # Allow chart version config
 ARG TARGETPLATFORM
-ARG EMBEDDED_CHART_VERSION=0.3.4
+ARG RANCHER_PROJECT_MONITORING=''
 ARG TAG=''
 ARG REPO=''
-ENV EMBEDDED_CHART_VERSION=$EMBEDDED_CHART_VERSION TAG=$TAG REPO=$REPO
+ENV RANCHER_PROJECT_MONITORING=$RANCHER_PROJECT_MONITORING TAG=$TAG REPO=$REPO
 
 WORKDIR /usr/src/app
 COPY --from=helm ./helm/bin/helm /usr/local/bin/
